--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "ts-node src/app.ts"
+  },
   "devDependencies": {
     "@types/node": "^20.6.2",
     "typescript": "^5.2.2"
